[gd_scene load_steps=10 format=3 uid="uid://bdw8cgfs4k3s0"]

[ext_resource type="Script" path="res://UI/game_over_screen.gd" id="1_j8g0j"]
[ext_resource type="Theme" uid="uid://ss5o0ot61xc0" path="res://themes/title_screen.tres" id="1_k85x5"]
[ext_resource type="Texture2D" uid="uid://t8h74uusbxr7" path="res://Sprites/UI/button_container_vertical.png" id="2_jd5dt"]

[sub_resource type="SystemFont" id="SystemFont_4dhts"]
font_names = PackedStringArray("November")

[sub_resource type="LabelSettings" id="LabelSettings_35ahg"]
font = SubResource("SystemFont_4dhts")
font_size = 180
font_color = Color(0, 0, 0, 1)
outline_size = 16
outline_color = Color(0.690196, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u1nij"]
font = SubResource("SystemFont_4dhts")
font_size = 40
font_color = Color(0, 0, 0, 1)
outline_size = 16
outline_color = Color(0.690196, 1, 0, 1)

[sub_resource type="Animation" id="Animation_nhacj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1llw6"]
resource_name = "Show"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pause_game"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6w5cw"]
_data = {
"RESET": SubResource("Animation_nhacj"),
"Show": SubResource("Animation_1llw6")
}

[node name="Game Over Screen" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_j8g0j")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 227.0
grow_horizontal = 2
theme_override_constants/margin_top = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="game over" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Game Over"
label_settings = SubResource("LabelSettings_35ahg")
horizontal_alignment = 1

[node name="waves" type="Label" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 0
text = "Rounds Survived:   1
Time Survived:  1m"
label_settings = SubResource("LabelSettings_u1nij")
horizontal_alignment = 1

[node name="button" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 400
theme_override_constants/margin_right = 160
theme_override_constants/margin_bottom = 100

[node name="menu" type="TextureRect" parent="button"]
layout_mode = 2
theme = ExtResource("1_k85x5")
texture = ExtResource("2_jd5dt")
stretch_mode = 5

[node name="HBoxContainer" type="VBoxContainer" parent="button/menu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -133.0
offset_right = 113.5
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 40
alignment = 1

[node name="Titelscreen" type="Button" parent="button/menu/HBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(227, 62)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_k85x5")
text = "Titelscreen"

[node name="options" type="Button" parent="button/menu/HBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(227, 62)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_k85x5")
text = "Options"

[node name="Exit" type="Button" parent="button/menu/HBoxContainer"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(227, 62)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_k85x5")
text = "Exit
"

[node name="Scoreboard" type="TextureRect" parent="button"]
layout_mode = 2
theme = ExtResource("1_k85x5")
texture = ExtResource("2_jd5dt")
stretch_mode = 5

[node name="enterUsername" type="VBoxContainer" parent="button/Scoreboard"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -184.0
offset_right = 113.5
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 40
alignment = 1

[node name="username" type="LineEdit" parent="button/Scoreboard/enterUsername"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_k85x5")
placeholder_text = "enter your username"
alignment = 1

[node name="Save" type="Button" parent="button/Scoreboard/enterUsername"]
process_mode = 3
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_k85x5")
text = "Save"

[node name="scoreboardList" type="VBoxContainer" parent="button/Scoreboard"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -184.0
offset_right = 113.5
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_constants/separation = 80
alignment = 1

[node name="list" type="VBoxContainer" parent="button/Scoreboard/scoreboardList"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="button/Scoreboard/scoreboardList"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="button/Scoreboard/scoreboardList/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_k85x5")
theme_override_font_sizes/font_size = 28
text = "your Ranking"
horizontal_alignment = 1

[node name="your rank" type="PanelContainer" parent="button/Scoreboard/scoreboardList/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("1_k85x5")

[node name="Label" type="Label" parent="button/Scoreboard/scoreboardList/VBoxContainer/your rank"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_k85x5")
theme_override_font_sizes/font_size = 24
text = "Samy | 24
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="button/Scoreboard/scoreboardList/VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_k85x5")
text = "Continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_6w5cw")
}
autoplay = "Show"

[connection signal="pressed" from="button/menu/HBoxContainer/Titelscreen" to="." method="_on_titelscreen_pressed"]
[connection signal="pressed" from="button/menu/HBoxContainer/Titelscreen" to="." method="titelscreen_pressed"]
[connection signal="pressed" from="button/menu/HBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="button/menu/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="button/Scoreboard/enterUsername/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="button/Scoreboard/scoreboardList/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
